vlib/v/checker/tests/assign_var_redefinition_err.vv
fn main() {
	println(test('whatever'))
}

fn test(aaaa string) string {
	aaaa := 'bbbb' + aaaa
	return aaaa
}
